--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="PortalOS like macOS" />
     <meta property="og:description" content="A painting of macOS Ventura in HTML, CSS and JS" />
     <meta property="og:image" content="https://macos-web.app/cover-image.png" />
-    <meta property="og:url" content="https://osui.prtl.cc" />
+    <meta property="og:url" content="https://os.prtl.cc" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <link rel="prefetch" href="/sounds/mac-startup-sound.mp3" />
